# aoc2024

./: .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
aoc2024/: utils.py
aoc2024/day01/: part1.py  part2.py  utils.py
aoc2024/day02/: part1.py  utils.py
aoc2024/day03/: part1.py  utils.py
aoc2024/tests/: conftest.py  test_day01.py  test_day02.py  test_day03.py
